fix horizontal scroll

--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -4,6 +4,7 @@ body {
   	background-color: #FAFAFF;
   	max-width: 1440px;
   	margin: 0 auto; 
+    overflow-x: hidden;
 }
 
 .main {
