--- a/src/scss/_mobile.scss
+++ b/src/scss/_mobile.scss
@@ -1,4 +1,8 @@
 @media (max-width: 784px) {
+	html, body  {
+		overflow-x: hidden;
+	}
+
 	.header {
 		.header__plank {
 			padding: 1rem;
